# T2D_Benchmark

./: .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE  PUBLIC_DATA_CARD.md  README.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  VALIDATION.md  VARIANCE_COMPONENTS.md  pyproject.toml  requirements.txt
data/demo/: README.md  synthetic_protocol_scores.csv  synthetic_score_matrix.csv
data/g_theory/: README.md  coefficients.csv  variance_components.csv
data/vignettes/: README.md  T2D_V001.json  T2D_V002.json  T2D_V003.json  T2D_V004.json  T2D_V005.json  T2D_V006.json  T2D_V007.json  T2D_V008.json  T2D_V009.json  T2D_V010.json  T2D_V011.json  T2D_V012.json  T2D_V013.json  T2D_V014.json  T2D_V015.json  T2D_V016.json  T2D_V017.json  T2D_V018.json  T2D_V019.json  T2D_V020.json  T2D_V021.json  T2D_V022.json  T2D_V023.json  T2D_V024.json  T2D_V025.json  T2D_V026.json  T2D_V027.json  T2D_V028.json  T2D_V029.json  T2D_V030.json  T2D_V031.json  T2D_V032.json  T2D_V033.json  T2D_V034.json  T2D_V035.json  T2D_V036.json  T2D_V037.json  T2D_V038.json  T2D_V039.json  (+442 more)
src/t2d_benchmark/: __init__.py  audit_release.py  build_factorial_index.py  build_public_vignettes.py  constants.py
src/t2d_benchmark/analysis/: __init__.py  generate_synthetic_demo_data.py  run_clinical_analysis.py
src/t2d_benchmark/g_theory/: __init__.py  coefficients.py  config.py  d_study.py  engine.py  run_g_theory.py  variance_components.py
tests/: test_audit_release.py  test_clinical_analysis.py  test_g_theory.py  test_public_data.py  test_vignettes.py
